--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,8 +7,7 @@
 <div class="row">
 	<div class="col-xs-12">
 		<app-recipe-item
-			*ngFor="let recipeEl of recipes"
-			[recipe]="recipeEl"
-			(click)="onSelected(recipeEl)"></app-recipe-item>
+			*ngFor="let recipe of recipes"
+			[recipe]="recipe"></app-recipe-item>
 	</div>
 </div>
