--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,15 +10,22 @@
 				<li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li class="dropdown" appDropdown>
-					<a style="cursor: pointer;" class="dropdown-toggle" role="button">
-						Manage <span class="caret"></span>
-					</a>
-					<ul class="dropdown-menu">
-						<li><a style="cursor: pointer;">Save Data</a></li>
-						<li><a style="cursor: pointer;">Fetch Data</a></li>
-					</ul>
-				</li>
+				<ng-template [ngIf]="!authService.isAuthenticated()" [ngIfElse]="isAuth">
+					<li routerLinkActive="active"><a routerLink="/signup">Register</a></li>
+					<li routerLinkActive="active"><a routerLink="/signin">Login</a></li>
+				</ng-template>
+				<ng-template #isAuth>
+					<li><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
+					<li class="dropdown" appDropdown>
+						<a style="cursor: pointer;" class="dropdown-toggle" role="button">
+							Manage <span class="caret"></span>
+						</a>
+						<ul class="dropdown-menu">
+							<li><a style="cursor: pointer;" (click)="onSave()">Save Data</a></li>
+							<li><a style="cursor: pointer;" (click)="onFetch()">Fetch Data</a></li>
+						</ul>
+					</li>
+				</ng-template>
 			</ul>
 		</div>
 	</div>
