--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,32 +1,32 @@
 <nav class="navbar navbar-default">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<a routerLink="/" class="navbar-brand">Recipe Book</a>
-		</div>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a routerLink="/" class="navbar-brand">Recipe Book</a>
+    </div>
 
-		<div class="navbar-default">
-			<ul class="nav navbar-nav">
-				<li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
-				<li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
-			</ul>
-			<ul class="nav navbar-nav navbar-right">
-				<ng-template [ngIf]="!isAuthenticated()" [ngIfElse]="isAuth">
-					<li routerLinkActive="active"><a routerLink="/signup">Register</a></li>
-					<li routerLinkActive="active"><a routerLink="/signin">Login</a></li>
-				</ng-template>
-				<ng-template #isAuth>
-					<li><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
-					<li class="dropdown" appDropdown>
-						<a style="cursor: pointer;" class="dropdown-toggle" role="button">
-							Manage <span class="caret"></span>
-						</a>
-						<ul class="dropdown-menu">
-							<li><a style="cursor: pointer;" (click)="onSave()">Save Data</a></li>
-							<li><a style="cursor: pointer;" (click)="onFetch()">Fetch Data</a></li>
-						</ul>
-					</li>
-				</ng-template>
-			</ul>
-		</div>
-	</div>
+    <div class="navbar-default">
+      <ul class="nav navbar-nav">
+        <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+        <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <ng-template [ngIf]="!(authState | async).authenticated" [ngIfElse]="isAuth">
+          <li routerLinkActive="active"><a routerLink="/signup">Register</a></li>
+          <li routerLinkActive="active"><a routerLink="/signin">Login</a></li>
+        </ng-template>
+        <ng-template #isAuth>
+          <li><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
+          <li class="dropdown" appDropdown>
+            <a style="cursor: pointer;" class="dropdown-toggle" role="button">
+              Manage <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a style="cursor: pointer;" (click)="onSave()">Save Data</a></li>
+              <li><a style="cursor: pointer;" (click)="onFetch()">Fetch Data</a></li>
+            </ul>
+          </li>
+        </ng-template>
+      </ul>
+    </div>
+  </div>
 </nav>
